[FIX] sap.m.CheckBox: Condensed layout corrected
Issues:
1) In condensed mode, the inner element of the checkbox
   was not centered inside its parent element
2) For sap_ fiori_3 some of the styles for condensed mode
   did not apply as the selector was not strong enough and was
   overwritten by selectors for compact mode

Solution:
1) Center the checkbox inner element (.sapMCbBg)
   within its container in condensed mode by adjusting top
   and left position
2) Increase CSS selector specificity in the base theme
   and sap_fiori_3 theme to prevent compact mode styles
   in sap_fiori_3 from overriding condensed mode styles

SNOW: DINC0567562

--- a/src/sap.m/src/sap/m/themes/base/CheckBox.less
+++ b/src/sap.m/src/sap/m/themes/base/CheckBox.less
@@ -256,8 +256,8 @@ html[data-sap-ui-browser^=ff] .sapMCbBg > input {
 }
 
 /* Condensed size */
-.sapUiSizeCondensed.sapUiTable,
-.sapUiSizeCondensed .sapUiTable {
+html.sap-desktop .sapUiSizeCondensed.sapUiTable,
+html.sap-desktop .sapUiSizeCondensed .sapUiTable {
 
 	.sapMCb {
 		height: 1.5rem;
@@ -271,8 +271,8 @@ html[data-sap-ui-browser^=ff] .sapMCbBg > input {
 	}
 
 	.sapMCbBg { /* check box itself */
-		left: 0.25rem;
-		top: 0.25rem;
+		left: 0.5rem;
+		top: 0.375rem; /* vertically center: (1.5rem - 0.75rem) / 2 = 0.375rem */
 		height: 0.75rem;
 		width: 0.75rem;
 		line-height: 0.75rem;
