--- a/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3/CheckBox.less
+++ b/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3/CheckBox.less
@@ -217,4 +217,11 @@ html.sap-desktop {
 			line-height: 0.875rem;
 		}
 	}
+
+	.sapUiSizeCondensed.sapUiTable,
+	.sapUiSizeCondensed .sapUiTable {
+		.sapMCb:not(.sapMCbErr):not(.sapMCbInfo):not(.sapMCbWarn) > .sapMCbBg {
+			line-height: 0.625rem;
+		}
+	}
 }
